more EDA 2D, plus reorging 2D EDA

--- a/titanic.ipynb
+++ b/titanic.ipynb
@@ -1058,7 +1058,7 @@
     "        col1_type = \"string\"\n",
     "    elif col1.dtype  == \"object\" and len(col1.unique()) < 10:\n",
     "        col1_type = \"string_class\"\n",
-    "    elif col1.dtype == np.float:\n",
+    "    elif col1.dtype == float:\n",
     "        col1_type = \"float\"\n",
     "    else:\n",
     "        assert(False)\n",
@@ -1071,7 +1071,7 @@
     "        col2_type = \"string\"\n",
     "    elif col2.dtype  == \"object\" and len(col2.unique()) < 10:\n",
     "        col2_type = \"string_class\"\n",
-    "    elif col2.dtype == np.float:\n",
+    "    elif col2.dtype == float:\n",
     "        col2_type = \"float\"\n",
     "    else:\n",
     "        assert(False)\n",
@@ -1092,9 +1092,16 @@
     "        plt.show()\n",
     "        print(f\"Correlation: {col1.corr(col2)}\")\n",
     "    def EDA_2D_int_string(col1, col2):\n",
-    "        print(\"Implement int string\")\n",
+    "        print(\"No implementation for visualization of int string\")\n",
     "    def EDA_2D_int_stringclass(col1, col2):\n",
-    "        print(\"Implement int stringclass\")\n",
+    "        class_list = []\n",
+    "        classes = col2.unique()\n",
+    "        for c in classes:\n",
+    "            class_list.append(col1[col2 == c])\n",
+    "        plt.boxplot(class_list, labels=classes)\n",
+    "        plt.ylabel(col1.name)\n",
+    "        plt.xlabel(col2.name)\n",
+    "        plt.show()\n",
     "    def EDA_2D_int_float(col1, col2):\n",
     "        print(\"Implement int float\")\n",
     "    def EDA_2D_intclass_intclass(col1, col2):\n",
@@ -1103,11 +1110,29 @@
     "        print(pd.concat([col1, col2]).groupby(col1).value_counts())\n",
     "        print(f\"Correlation: {col1.corr(col2)}\")\n",
     "    def EDA_2D_intclass_string(col1, col2):\n",
-    "        print(\"Implement intclass string\")\n",
+    "        print(pd.concat([col1, col2]).groupby(col1).value_counts())\n",
+    "        classes = col1.unique()\n",
+    "        words_list = \" \".join(col2.dropna()).split()\n",
+    "        word_cnts = Counter(words_list)\n",
+    "        top_words = ticket_word_cnts.most_common(50)\n",
+    "        \n",
+    "        for c in classes:\n",
+    "            print(f\"{c}:{Counter(' '.join(col2[col1==c].dropna()).split()).most_common(20)}\")\n",
+    "            \n",
     "    def EDA_2D_intclass_stringclass(col1, col2):\n",
-    "        print(\"Implement intclass stringclass\")\n",
+    "        col1_classes = col1.unique()\n",
+    "        col2_classes = col2.unique()\n",
+    "        print(pd.concat([col1, col2]).groupby(col1).value_counts())\n",
     "    def EDA_2D_intclass_float(col1, col2):\n",
-    "        print(\"Implement intclass float\")\n",
+    "        col1_classes = col1.unique()\n",
+    "        boxplots = []\n",
+    "        for c in col1_classes:\n",
+    "            boxplots.append(col2[col1 == c].dropna())\n",
+    "        plt.boxplot(boxplots, labels=col1_classes)\n",
+    "        plt.xlabel(col1.name)\n",
+    "        plt.ylabel(col2.name)\n",
+    "        plt.show()\n",
+    "        print(f\"Correlation: {col1.corr(col2)}\")\n",
     "    def EDA_2D_string_string(col1, col2):\n",
     "        print(\"Implement string string\")\n",
     "    def EDA_2D_string_stringclass(col1, col2):\n",
@@ -1259,9 +1284,34 @@
    "execution_count": 24,
    "id": "35da5eea-7817-4efc-9e3b-372c68b0768a",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Feature Pair: ('Survived', 'Name')\n",
+      "Datatypes: ('int_class', 'string')\n",
+      "Survived                                              \n",
+      "0         0                                               549\n",
+      "          Abbing, Mr. Anthony                               1\n",
+      "          Abbott, Mr. Rossmore Edward                       1\n",
+      "          Abelson, Mr. Samuel                               1\n",
+      "          Adahl, Mr. Mauritz Nils Martin                    1\n",
+      "                                                         ... \n",
+      "1         Woolner, Mr. Hugh                                 1\n",
+      "          Yasbeck, Mrs. Antoni (Selini Alexander)           1\n",
+      "          Young, Miss. Marie Grice                          1\n",
+      "          de Messemaeker, Mrs. Guillaume Joseph (Emma)      1\n",
+      "          de Mulder, Mr. Theodore                           1\n",
+      "Name: count, Length: 893, dtype: int64\n",
+      "0:[('Mr.', 436), ('Miss.', 55), ('William', 41), ('John', 33), ('Mrs.', 26), ('Henry', 23), ('James', 18), ('Master.', 17), ('Charles', 16), ('George', 16), ('Thomas', 14), ('Johan', 13), ('Edward', 12), ('Joseph', 11), ('Alfred', 11), ('Richard', 10), ('Frederick', 10), ('Arthur', 9), ('Samuel', 8), ('J', 7)]\n",
+      "1:[('Miss.', 127), ('Mrs.', 99), ('Mr.', 81), ('Master.', 23), ('William', 21), ('John', 11), ('Henry', 10), ('Anna', 9), ('Mary', 9), ('Elizabeth', 7), ('Charles', 7), ('Margaret', 7), ('Thomas', 7), ('(Elizabeth', 6), ('James', 6), ('Edward', 6), ('George', 6), ('Anne', 5), ('Albert', 5), ('Joseph', 5)]\n"
+     ]
+    }
+   ],
    "source": [
-    "# 3. Survived, Name"
+    "# 3. Survived, Name\n",
+    "EDA_2D(df.Survived, df.Name)"
    ]
   },
   {
@@ -1274,74 +1324,39 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "-0.5433513806577546\n"
+      "Feature Pair: ('Survived', 'Sex')\n",
+      "Datatypes: ('int_class', 'string_class')\n",
+      "Survived        \n",
+      "0         0         549\n",
+      "          male      468\n",
+      "          female     81\n",
+      "1         1         342\n",
+      "          female    233\n",
+      "          male      109\n",
+      "Name: count, dtype: int64\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "Survived  Sex\n",
-       "0         1      0.525253\n",
-       "          0      0.090909\n",
-       "1         0      0.261504\n",
-       "          1      0.122334\n",
-       "Name: count, dtype: float64"
-      ]
-     },
-     "execution_count": 25,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
     "# 4. Survived, Sex\n",
-    "is_male_series = df.Sex.apply(lambda x: 0 if x == 'female' else 1)\n",
-    "print(is_male_series.corr(df.Survived))\n",
     "# We have a moderate association between sex and survival\n",
     "# It is negative - meaning males had a lower chance of survival\n",
-    "\n",
-    "# Exact values of pairs\n",
-    "pd.concat([is_male_series, df.Survived], axis=1).groupby(\"Survived\").value_counts()\n",
-    "\n",
-    "# Percentage of total in each pair\n",
-    "pd.concat([is_male_series, df.Survived], axis=1).groupby(\"Survived\").value_counts().apply(lambda x: x / len(df))\n",
-    "# Over half of the dataset is males who died"
+    "# Over half of the dataset is males who died\n",
+    "EDA_2D(df.Survived, df.Sex)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
    "id": "cd3dfc19-0a1c-43fb-98cc-d32d72774543",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "               Age  Survived\n",
-      "Age       1.000000 -0.077221\n",
-      "Survived -0.077221  1.000000\n"
-     ]
-    },
-    {
-     "ename": "NameError",
-     "evalue": "name 'no_survived_df' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[26], line 3\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;66;03m# 5. Survived, Age\u001b[39;00m\n\u001b[1;32m      2\u001b[0m \u001b[38;5;28mprint\u001b[39m(df[[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mAge\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mSurvived\u001b[39m\u001b[38;5;124m'\u001b[39m]]\u001b[38;5;241m.\u001b[39mdropna()\u001b[38;5;241m.\u001b[39mcorr())\n\u001b[0;32m----> 3\u001b[0m plt\u001b[38;5;241m.\u001b[39mboxplot([\u001b[43mno_survived_df\u001b[49m\u001b[38;5;241m.\u001b[39mAge\u001b[38;5;241m.\u001b[39mdropna(), survived_df\u001b[38;5;241m.\u001b[39mAge\u001b[38;5;241m.\u001b[39mdropna()], labels\u001b[38;5;241m=\u001b[39m[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m0\u001b[39m\u001b[38;5;124m'\u001b[39m,\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m1\u001b[39m\u001b[38;5;124m'\u001b[39m])\n\u001b[1;32m      4\u001b[0m \u001b[38;5;66;03m# Broadly speaking, there's no association with age and survival\u001b[39;00m\n\u001b[1;32m      5\u001b[0m \u001b[38;5;66;03m# This is surprising - I would've assumed children would've had a higher chance of survival\u001b[39;00m\n\u001b[1;32m      6\u001b[0m \u001b[38;5;66;03m# Also that older folks would've had a lower chance of survival - we can break this up more later when we bin ages\u001b[39;00m\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'no_survived_df' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# 5. Survived, Age\n",
-    "print(df[['Age', 'Survived']].dropna().corr())\n",
-    "plt.boxplot([no_survived_df.Age.dropna(), survived_df.Age.dropna()], labels=['0','1'])\n",
     "# Broadly speaking, there's no association with age and survival\n",
     "# This is surprising - I would've assumed children would've had a higher chance of survival\n",
-    "# Also that older folks would've had a lower chance of survival - we can break this up more later when we bin ages"
+    "# Also that older folks would've had a lower chance of survival - we can break this up more later when we bin ages\n",
+    "EDA_2D(df.Survived, df.Age)"
    ]
   },
   {
@@ -1352,12 +1367,11 @@
    "outputs": [],
    "source": [
     "# 6. Survived, SibSp\n",
-    "print(df[['SibSp', 'Survived']].dropna().corr())\n",
-    "plt.boxplot([no_survived_df.SibSp.dropna(), survived_df.SibSp.dropna()], labels=['0','1'])\n",
     "# Largely there's no correlation if you look at the bulk of the data\n",
     "# When we look at outliers, the bigger families tended to not survive\n",
     "# Maybe an interaction term between SibSp and 'isOutlier' could be useful?\n",
-    "# I think it might overfit though and compromise average performance"
+    "# I think it might overfit though and compromise average performance\n",
+    "EDA_2D(df.Survived, df.SibSp)"
    ]
   },
   {
@@ -1368,12 +1382,10 @@
    "outputs": [],
    "source": [
     "# 7. Survived, Parch\n",
-    "print(df[['Parch', 'Survived']].dropna().corr())\n",
-    "plt.boxplot([no_survived_df.Parch.dropna(), survived_df.Parch.dropna()], labels=['0','1'])\n",
     "# It seems like not survivng is concentrated at 0\n",
     "# Let's group it \n",
-    "df[['Parch', 'Survived']].dropna().groupby('Survived').value_counts()\n",
-    "# Those without parents or siblings were more likely to not survive. Maybe it's correlated with being an adult male?"
+    "# Those without parents or siblings were more likely to not survive. Maybe it's correlated with being an adult male?\n",
+    "EDA_2D(df.Survived, df.Parch)"
    ]
   },
   {
@@ -1383,7 +1395,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 8. Survived, Ticket"
+    "# 8. Survived, Ticket\n",
+    "# Seems as if some words are more common than others for each class\n",
+    "EDA_2D(df.Survived, df.Ticket)"
    ]
   },
   {
@@ -1393,7 +1407,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 9. Survived, Fare"
+    "# 9. Survived, Fare\n",
+    "# Seems there's some correlation with fare and survival\n",
+    "EDA_2D(df.Survived, df.Fare)"
    ]
   },
   {
@@ -1403,7 +1419,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 10. Survived, Cabin"
+    "# 10. Survived, Cabin\n",
+    "EDA_2D(df.Survived, df.Cabin)"
    ]
   },
   {
@@ -1413,7 +1430,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 11. Survived, Embarked"
+    "# 11. Survived, Embarked\n",
+    "EDA_2D(df.Survived, df.Embarked)"
    ]
   },
   {
@@ -1423,7 +1441,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 12. PassengerId, Pclass"
+    "# 12. PassengerId, Pclass\n",
+    "EDA_2D(df.PassengerId, df.Pclass)"
    ]
   },
   {
@@ -1433,7 +1452,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 13. PassengerId, Name"
+    "# 13. PassengerId, Name\n",
+    "EDA_2D(df.PassengerId, df.Name)"
    ]
   },
   {
@@ -1443,7 +1463,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 14. PassengerId, Sex"
+    "# 14. PassengerId, Sex\n",
+    "EDA_2D(df.PassengerId, df.Sex)"
    ]
   },
   {
@@ -1453,7 +1474,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 15. PassengerId, Age"
+    "# 15. PassengerId, Age\n",
+    "EDA_2D(df.PassengerId, df.Age)"
    ]
   },
   {
@@ -1463,7 +1485,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 16. PassengerId, SibSp"
+    "# 16. PassengerId, SibSp\n",
+    "EDA_2D(df.PassengerId, df.SibSp)"
    ]
   },
   {
@@ -1473,7 +1496,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 17. PassengerId, Parch"
+    "# 17. PassengerId, Parch\n",
+    "EDA_2D(df.PassengerId, df.Parch)"
    ]
   },
   {
@@ -1483,7 +1507,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 18. PassengerId, Ticket"
+    "# 18. PassengerId, Ticket\n",
+    "EDA_2D(df.PassengerId, df.Ticket)"
    ]
   },
   {
@@ -1493,7 +1518,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 19. PassengerId, Fare"
+    "# 19. PassengerId, Fare\n",
+    "EDA_2D(df.PassengerId, df.Fare)"
    ]
   },
   {
@@ -1503,7 +1529,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 20. PassengerId, Cabin"
+    "# 20. PassengerId, Cabin\n",
+    "EDA_2D(df.PassengerId, df.Cabin)"
    ]
   },
   {
@@ -1513,7 +1540,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 21. PassengerId, Embarked"
+    "# 21. PassengerId, Embarked\n",
+    "EDA_2D(df.PassengerId, df.Embarked)"
    ]
   },
   {
